--- a/My_First_Notebook.ipynb
+++ b/My_First_Notebook.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "My First Notebook",
       "provenance": [],
-      "authorship_tag": "ABX9TyMn2q287wSf9wsmqpbH+CCs",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMNCUdc7dMFmqab4djzoWP/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,17 +29,6 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "MaICE7WnCjIf"
-      },
-      "outputs": [],
-      "source": [
-        ""
-      ]
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# My First Notebook!\n",
@@ -57,7 +47,8 @@
         "\n",
         "---------------------\n",
         "The above was the template given from class the rest is extra stuff\n",
-        "\n"
+        "\n",
+        "**This is me practicing bolding text**"
       ],
       "metadata": {
         "id": "cUO1aSXjDWrh"
@@ -73,22 +64,27 @@
         "\n",
         "# assign the value of 4 to the variable x and then print x\n",
         "x = 2 + 2\n",
-        "print(x)"
+        "print(x)\n",
+        "\n",
+        "# assign the value of 4 to the variable y and then print y\n",
+        "y = 2 * 2\n",
+        "print (y)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2giz7i6oD6Bf",
-        "outputId": "75148bcd-93a9-47f2-b8e0-0e2fdfa455cf"
+        "outputId": "44fdefe6-a25a-4b66-92fd-448dd186ef8e"
       },
-      "execution_count": 1,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "Hello World!\n",
+            "4\n",
             "4\n"
           ]
         }
